mwpw-175529(fix): removes browser spacing from UL elements

--- a/less/components/consonant/cards-grid.less
+++ b/less/components/consonant/cards-grid.less
@@ -133,3 +133,8 @@
         }
     }
 }
+
+ul.consonant-CardsGrid {
+    margin: 0;
+    padding: 0;
+}
